# pkmn

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: deploy.yml
data/: pokemon.yml
data/cards/: sets.yml
data/cards/en/black-white/: black-white-energy-2011.yml  black-white-promos.yml  black-white-trainer-kit-excadrill.yml  black-white-trainer-kit-zoroark.yml  black-white.yml  boundaries-crossed.yml  dark-explorers.yml  dragon-vault.yml  dragons-exalted.yml  emerging-powers.yml  legendary-treasures.yml  next-destinies.yml  noble-victories.yml  plasma-blast.yml  plasma-freeze.yml  plasma-storm.yml
data/cards/en/classic/: base-set-2.yml  base-set.yml  fossil.yml  jungle.yml  team-rocket.yml  wizards-black-star-promos.yml
data/cards/en/diamond-pearl/: diamond-pearl-promos.yml  diamond-pearl-trainer-kit-lucario.yml  diamond-pearl-trainer-kit-manaphy.yml  diamond-pearl.yml  great-encounters.yml  legends-awakened.yml  majestic-dawn.yml  mysterious-treasures.yml  secret-wonders.yml  stormfront.yml
data/cards/en/e-card/: aquapolis.yml  expedition.yml  skyridge.yml
data/cards/en/ex/: crystal-guardians.yml  delta-species.yml  deoxys.yml  dragon-frontiers.yml  dragon.yml  emerald.yml  ex-trainer-kit-latias.yml  ex-trainer-kit-latios.yml  ex-trainer-kit-minun.yml  ex-trainer-kit-plusle.yml  firered-leafgreen.yml  hidden-legends.yml  holon-phantoms.yml  legend-maker.yml  nintendo-black-star-promos.yml  power-keepers.yml  ruby-sapphire.yml  sandstorm.yml  team-magma-vs-team-aqua.yml  team-rocket-returns.yml  unseen-forces.yml
data/cards/en/gym/: gym-challenge.yml  gym-heroes.yml
data/cards/en/heartgold-soulsilver/: call-of-legends.yml  heartgold-soulsilver-energy-2010.yml  heartgold-soulsilver-promos.yml  heartgold-soulsilver-trainer-kit-gyarados.yml  heartgold-soulsilver-trainer-kit-raichu.yml  heartgold-soulsilver.yml  triumphant.yml  undaunted.yml  unleashed.yml
data/cards/en/mcdonalds/: mcdonalds-collection-2011.yml  mcdonalds-collection-2012.yml  mcdonalds-collection-2016.yml  mcdonalds-collection-2019.yml  mcdonalds-collection-2021.yml  mcdonalds-collection-2022.yml  mcdonalds-match-battle-2023.yml
data/cards/en/mega-evolution/: ascended-heroes.yml  chaos-rising.yml  mega-evolution-energy.yml  mega-evolution-promos.yml  mega-evolution.yml  perfect-order.yml  phantasmal-flames.yml
data/cards/en/neo/: neo-destiny.yml  neo-discovery.yml  neo-genesis.yml  neo-revelation.yml
data/cards/en/other/: ancient-mew.yml  best-of-game.yml  legendary-collection.yml  rumble.yml  southern-islands.yml  victory-medals.yml
data/cards/en/platinum/: arceus.yml  platinum.yml  rising-rivals.yml  supreme-victors.yml
data/cards/en/pokemon-tcg-classic/: pokemon-tcg-classic-blastoise.yml  pokemon-tcg-classic-charizard.yml  pokemon-tcg-classic-venusaur.yml
data/cards/en/pop/: pop-series-1.yml  pop-series-2.yml  pop-series-3.yml  pop-series-4.yml  pop-series-5.yml  pop-series-6.yml  pop-series-7.yml  pop-series-8.yml  pop-series-9.yml
data/cards/en/scarlet-violet/: 151.yml  black-bolt.yml  destined-rivals.yml  journey-together.yml  obsidian-flames.yml  paldea-evolved.yml  paldean-fates.yml  paradox-rift.yml  prismatic-evolutions.yml  scarlet-violet-energy.yml  scarlet-violet-promos.yml  scarlet-violet.yml  shrouded-fable.yml  stellar-crown.yml  surging-sparks.yml  temporal-forces.yml  twilight-masquerade.yml  white-flare.yml
data/cards/en/sun-moon/: cosmic-eclipse.yml  (+20 more)
pkmn-cli/: Cargo.toml  README.md
pkmn-cli/src/: cli.rs  lib.rs  main.rs
pkmn-cli/src/cards/: copy_images.rs  images.rs  mod.rs  print_errors.rs  remove_set.rs  rename_set.rs  scrape_cards.rs  scrape_unknown_sets.rs  validate.rs  validate_cards.rs  validate_images.rs
pkmn-core/: Cargo.toml  README.md
pkmn-core/src/: lib.rs
pkmn-core/src/cards/: card_id.rs  mod.rs
pkmn-core/src/clean/: damage.rs  energy.rs  mod.rs  pokemon_names.rs
pkmn-core/src/validate/: mod.rs
pkmn-data/: Cargo.toml  README.md
pkmn-data/src/: lib.rs  pokemon.rs
pkmn-data/src/cards/: cards.rs  io.rs  mod.rs
pkmn-schema/: Cargo.toml  README.md
pkmn-schema/src/api/: mod.rs
pkmn-schema/src/cards/: mod.rs
pkmn-schema/src/core/: mod.rs
pkmn-scrape/: Cargo.toml  README.md
pkmn-scrape/src/: lib.rs
pkmn-scrape/src/pkmncards/: client.rs  mod.rs
pkmn-scrape/src/pkmncards/cards/scrape/: mod.rs  scrape_action.rs  scrape_card.rs  scrape_cards.rs  scrape_energy_card.rs  scrape_meta.rs  scrape_pokemon_card.rs  scrape_trainer_card.rs
pkmn-scrape/src/pkmncards/sets/: mod.rs  scrape_sets.rs  scrape_unknown_sets.rs  set_id_map.csv  set_id_map.rs
pkmn-scrape/src/pokemontcgio/: client.rs  mod.rs  model.rs
pkmn-scrape/src/pokemontcgio/sets/: clean_sets.rs  mod.rs  scrape_sets.rs  scrape_unknown_sets.rs  set_id_map.csv  set_id_map.rs
pkmn-scrape/src/util/: local_cache.rs  mod.rs  resize_webp.rs
pkmn-service/: Cargo.toml  README.md
pkmn-service/src/: lib.rs  main.rs
pkmn-service/src/cards/: card_service.rs  mod.rs
schema/: pokemon.pps
schema/api/v0/: cards.pps
schema/cards/: action.pps  card.pps  energy.pps  meta.pps  pokemon.pps  set.pps  trainer.pps
schema/core/: api.pps  web.pps
(+134 files in other folders)
