[workspace]
resolver = "3"
members = [
    "pkmn-core",
    "pkmn-data",
    "pkmn-schema",
]

[workspace.package]
version = "0.0.0"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2024"
publish = false

[workspace.dependencies]
pkmn-core = { path = "pkmn-core" }
pkmn-schema = { path = "pkmn-schema" }

# Serialization
proto-packet = { path = "../proto-packet/dep/dep-rust" } # todo -- path dependency
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
