[workspace]
resolver = "3"
members = [
    "pkmn-core",
    "pkmn-data",
    "pkmn-schema",
    "pkmn-scrape",
]

[workspace.package]
version = "0.0.0"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2024"
publish = false

[workspace.dependencies]
pkmn-core = { path = "pkmn-core" }
pkmn-data = { path = "pkmn-data" }
pkmn-schema = { path = "pkmn-schema" }

# Scraping
file-storage = "0.8.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
scraper = "0.26.0"
web-scrape = "0.11.0-rc.2" # todo -- release candidate
web-url = "0.10.0"

# Serialization
proto-packet = { path = "../proto-packet/dep/dep-rust" } # todo -- path dependency
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
