[workspace]
resolver = "3"
members = [
    "pkmn-cli",
    "pkmn-core",
    "pkmn-data",
    "pkmn-schema",
    "pkmn-scrape",
]

[workspace.package]
version = "0.0.0"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2024"
publish = false

[workspace.dependencies]
pkmn-cli = { path = "pkmn-cli" }
pkmn-core = { path = "pkmn-core" }
pkmn-data = { path = "pkmn-data" }
pkmn-schema = { path = "pkmn-schema" }
pkmn-scrape = { path = "pkmn-scrape" }

# CLI
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"

# Scraping
file-storage = "0.8.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
scraper = "0.26.0"
web-scrape = "0.11.0-rc.2" # todo -- release candidate
web-url = "0.10.0"

# Serialization
proto-packet = { path = "../proto-packet/dep/dep-rust" } # todo -- path dependency
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
