[package]
name = "pkmn-cli"
description = "This library provides the pkmn.com command-line interface."
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "pkmn"
path = "src/main.rs"

[dependencies]
pkmn-data = { workspace = true }
pkmn-schema = { workspace = true }
pkmn-scrape = { workspace = true, features = ["pkmncards", "pokemontcgio"] }

clap = { workspace = true }
dotenvy = { workspace = true }
file-storage = { workspace = true, features = ["r2"] }
