[package]
name = "pkmn-scrape"
description = "This library aids in scraping data for pkmn.com."
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
pkmn-data = { workspace = true }
pkmn-schema = { workspace = true }

file-storage = { workspace = true }
image = { workspace = true }
pkmn-core = { workspace = true }
proto-packet = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
web-scrape = { workspace = true }
web-url = { workspace = true }
webp = { workspace = true }

[features]
pkmncards = []
pokemontcgio = []
