[package]
name = "pkmn-service"
description = "This library provides the pkmn.com backend services."
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
pkmn-data = { workspace = true }
pkmn-schema = { workspace = true }

proto-packet = { workspace = true }
tokio = { workspace = true }
